2006-06-26;	Alexandru Csete <csete@users.sourceforge.net>

	* configure.ac:
	Don't use AC_DEFINEs to define locale, data and pixmapsdirs because that
	does not work with autoconf 2.59e anymore (was the wrong way to do it
	according to GNU Coding Std).

	* src/Makefile.am:
	Added locale, data and pixmapdir definitions:
	-DPACKAGE_DATA_DIR=\""$(datadir)/grig"\" \
	-DPACKAGE_PIXMAPS_DIR=\""$(datadir)/pixmaps/grig"\" \
	-DPACKAGE_LOCALE_DIR=\""$(datadir)/locale"\"
	Pixmaps will thus go to /usr/local/share/pixmaps/grig instead of
	/usr/local/share/grig/pixmaps by default.

	* pixmaps/Makefile.am:
	Redefined pixmapsdir to $(datadir)/pixmaps/grig
	

2006-03-28;	Alexandru Csete <csete@users.sourceforge.net>

	* src/rig-daemon.c:
	Sleep between commands only if the last command has been executed.
	Added hamlib error message when a command failes to execute.

	* src/grig-debug:
	Use local debug level in order to be able to filter grig debug messages
	(bug #1457361).

	* src/grig-menubar.c, src/main.c:
	Use grig_debug_set_level instead of rig_set_debug.


2006-03-27;	Alexandru Csete <csete@users.sourceforge.net>

	* src/rig-daemon.c:
	Generate log message when rig_daemon_set_suspend is called.

	* src/rig-state.c:
	Finished save/load state of supported parameters.

	* NEWS:
	Updated with information about saving and restoring rig state.

	* src/rig-daemon-check.c:
	Fixed bug, which gave the error message "Can not find VFO list for this
	rig! Bug in backend?" if the rig did not have any of the rig_set_vfo or
	rig_get_vfo functions (bug #1440876).

	* src/grig-menubar.c:
	Modified menu utems in View menu to toggle items.
	

2006-03-23;	Alexandru Csete <csete@users.sourceforge.net>

	* src/rig-daemon.c:
	Nailed even more potential flicker bugs. Added function to obtain hamlib
	id of radio.

	* src/rig-utils:
	Added function to check file name for extension.

	* src/rig-state.c:
	Done some work on save state. Rig ID is already saved, all I need is to