@@ -32,23 +32,22 @@ LEV_STRGTH     [X]     [X]     [ ]    [X]
 LEV_RF_PWR     [X]     [X]     [X]    [X]
 LEV_SWR        [X]     [X]     [ ]    [X]
 LEV_ALC        [X]     [X]     [ ]    [X]
-LEV_VOX_DEL    [ ]     [ ]     [ ]    [ ]
-LEV_VOX_GAIN   [ ]     [ ]     [ ]    [ ]
-LEV_ANTIVOX    [ ]     [ ]     [ ]    [ ]
-LEV_AFG        [ ]     [ ]     [ ]    [ ]
-LEV_RFG        [ ]     [ ]     [ ]    [ ]
-LEV_SQL        [ ]     [ ]     [ ]    [ ]
-LEV_IF         [ ]     [ ]     [ ]    [ ]
-LEV_APF        [ ]     [ ]     [ ]    [ ]
-LEV_NR         [ ]     [ ]     [ ]    [ ]
-LEV_PBT_IN     [ ]     [ ]     [ ]    [ ]
-LEV_PBT_OUT    [ ]     [ ]     [ ]    [ ]
-LEV_CWPITCH    [ ]     [ ]     [ ]    [ ]
-LEV_MICG       [ ]     [ ]     [ ]    [ ]
-LEV_KEYSPD     [ ]     [ ]     [ ]    [ ]
-LEV_NOTCHF     [ ]     [ ]     [ ]    [ ]
-LEV_COMP       [ ]     [ ]     [ ]    [ ]
-LEV_AGC        [ ]     [ ]     [ ]    [ ]
-LEV_BKINDEL    [ ]     [ ]     [ ]    [ ]
-LEV_BALANCE    [ ]     [ ]     [ ]    [ ] 
+LEV_VOX_DEL    [X]     [ ]     [ ]    [ ]
+LEV_VOX_GAIN   [X]     [ ]     [ ]    [ ]
+LEV_ANTIVOX    [X]     [ ]     [ ]    [ ]
+LEV_AFG        [X]     [ ]     [ ]    [ ]
+LEV_RFG        [X]     [ ]     [ ]    [ ]
+LEV_SQL        [X]     [ ]     [ ]    [ ]
+LEV_IF         [X]     [ ]     [ ]    [ ]
+LEV_APF        [X]     [ ]     [ ]    [ ]
+LEV_NR         [X]     [ ]     [ ]    [ ]
+LEV_PBT_IN     [X]     [ ]     [ ]    [ ]
+LEV_PBT_OUT    [X]     [ ]     [ ]    [ ]
+LEV_CWPITCH    [X]     [ ]     [ ]    [ ]
+LEV_MICG       [X]     [ ]     [ ]    [ ]
+LEV_KEYSPD     [X]     [ ]     [ ]    [ ]
+LEV_NOTCHF     [X]     [ ]     [ ]    [ ]
+LEV_COMP       [X]     [ ]     [ ]    [ ]
+LEV_BKINDEL    [X]     [ ]     [ ]    [ ]
+LEV_BALANCE    [X]     [ ]     [ ]    [ ] 
 LEV_METER      [ ]     [ ]     [ ]    [ ]
